# BLUETOOTH_USART_PC

./: LICENSE  README.md  pyproject.toml  usart_keyboard.py.bak
src/usart_keyboard/: __init__.py  __main__.py  app.py  constants.py  serial_manager.py
